# ecis-processing

./: .gitignore  LICENSE  README.rst  main.py  pyproject.toml
.github/workflows/: pytest.yml
ecis_learning/: STC_dx.json  __main__.py  data_processor.py  diagnoses.py  diagnosis_data_processor.py  medication_data_processor.py  medications.py  processed.csv
ecis_processing/: __main__.py  data_objects.py  data_processor.py  diagnosis_data_processor.py  interval_data_processor.py  medication_data_processor.py  note_data_processor.py  patient_data_processor.py  timetrials.py
tests/: test_ecis_learning.py  test_ecis_processing.py
tests/integration/: test_integration.py
tests/integration/fixtures/STC_EHR/: processed.csv
tests/integration/fixtures/STC_EHR/Diagnoses/: STC_dx.json
tests/integration/fixtures/STC_EHR/Medications_Allscripts/: STC_meds_alls_180710.json
tests/integration/fixtures/STC_EHR/Medications_EPIC/: STC_meds_e_180710.json
tests/integration/fixtures/STC_EHR/Medications_Soarian/: STC_meds_soarian_180710.json
tests/integration/fixtures/STC_EHR/Notes/: stc_notes.json
tests/integration/fixtures/STC_EHR/Patients/: patients.json
tests/integration/fixtures/STC_EHR/Radiology/: radiology_notes.json
