[tool.poetry]
name = "ecis-processing"
version = "0.1.0"
description = ""
authors = ["Fisher Sun <fisher521.fs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
