[tool.poetry]
name = "ecis-processing"
version = "0.3.1"
description = "A program that processes diagnosis and medication data "
authors = ["Fisher Sun <fisher521.fs@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/tactlessfish/ecis-processing"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
ecis-processing = "ecis_processing.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
